add PUT /admin/{id}
